--- a/client/src/components/spinner/spinner.css
+++ b/client/src/components/spinner/spinner.css
@@ -1,3 +1,3 @@
 .spinnerSpan {
-  vertical-align: -11px;
+  vertical-align: 7px;
 }
